--- a/model.ipynb
+++ b/model.ipynb
@@ -30,9 +30,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "..."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -115,19 +113,15 @@
     "        self.conv = nn.Conv2d(in_channels=x, out_channels=y, kernel_size=(a,b), padding=0)  \n",
     "        self.pool = nn.MaxPool2d(2)\n",
     "        self.flat = nn.Flatten()\n",
-    "        self.fc1 = nn.Linear(in_features=x, out_features=y)\n",
-    "        self.fc2 = nn.Linear(x, y)\n",
+    "        self.fc = nn.Linear(in_features=x, out_features=y)\n",
     "        self.a = nn.Sigmoid()\n",
     "\n",
     "    #Forward Pass:  \n",
     "    def forward(self, x):   \n",
-    "        out = self.conv1(x)   \n",
-    "        out = torch.relu(self.pool1(out))\n",
-    "        out = self.conv2(out)     \n",
-    "        out = torch.relu(self.pool2(out))  \n",
+    "        out = self.conv(x)   \n",
+    "        out = torch.relu(self.pool(out))\n",
     "        out = self.flat(out) \n",
-    "        out = torch.relu(self.fc1(out))  \n",
-    "        out = self.fc2(out)\n",
+    "        out = torch.relu(self.fc(out))  \n",
     "        out = self.a(out)\n",
     "        return out"
    ]
