--- a/model.ipynb
+++ b/model.ipynb
@@ -9,13 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "from torch import nn\n",
-    "import matplotlib.pyplot as plt"
+    "from torch import nn, optim\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "import rasterio\n",
+    "import pickle"
    ]
   },
   {
@@ -27,10 +30,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def import_training_imgs(train_folder):\n",
+    "    train_data = dict()\n",
+    "\n",
+    "    for file in os.listdir(train_folder):\n",
+    "        if file.endswith('.tif'):\n",
+    "            with rasterio.open(train_folder + file) as src:\n",
+    "                train_data.update({ file : src.read() })\n",
+    "    return train_data\n",
+    "\n",
+    "if os.path.exists('loaded/train_images.pkl'):\n",
+    "    train_imgs = pickle.load(open('loaded/train_images.pkl', 'rb'))\n",
+    "else:\n",
+    "    train_imgs = import_training_imgs('data/train_images/')\n",
+    "    pickle.dump(train_imgs, open('loaded/train_images.pkl', 'wb'))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -41,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,31 +117,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x, y, a, b = 0, 0, 0, 0 # Must be defined in the network\n",
-    "\n",
     "class SimpleConvNet(nn.Module):\n",
     "\n",
     "    #Architecture\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.conv = nn.Conv2d(in_channels=x, out_channels=y, kernel_size=(a,b), padding=0)  \n",
+    "        self.conv1 = nn.Conv2d(in_channels=12, out_channels=32, kernel_size=(5,5), padding=2)  \n",
     "        self.pool = nn.MaxPool2d(2)\n",
+    "        self.conv2 = nn.Conv2d(in_channels=32, out_channels=12, kernel_size=(3,3), padding=1)  \n",
     "        self.flat = nn.Flatten()\n",
-    "        self.fc = nn.Linear(in_features=x, out_features=y)\n",
+    "        self.fc = nn.Linear(in_features=12 * 1024 * 1024, out_features=1 * 1024 * 1024)\n",
     "        self.a = nn.Sigmoid()\n",
     "\n",
     "    #Forward Pass:  \n",
-    "    def forward(self, x):   \n",
-    "        out = self.conv(x)   \n",
+    "    def forward(self, x): \n",
+    "        print(\"Input\",x.shape)  \n",
+    "        out = self.conv1(x)   \n",
+    "        print(\"First conv\", out.shape)\n",
     "        out = torch.relu(self.pool(out))\n",
+    "        out = self.conv2(x)\n",
+    "        print(\"Second conv\", out.shape)\n",
     "        out = self.flat(out) \n",
     "        out = torch.relu(self.fc(out))  \n",
     "        out = self.a(out)\n",
     "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = SimpleConvNet()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"hei\")\n",
+    "image = train_imgs['image_1.tif']\n",
+    "print(image.shape)\n",
+    "model(image)"
    ]
   },
   {
@@ -141,10 +183,11 @@
    "source": [
     "# Define hyperparameters\n",
     "n_epochs = 10\n",
-    "optimizer = None\n",
-    "model = None\n",
+    "lr = 1e-2\n",
+    "model = SimpleConvNet()\n",
+    "optimizer = optim.SGD(model.parameters(), lr=lr)\n",
     "loss_fn = None\n",
-    "train_loader = None\n",
+    "train_loader = {k: train_imgs[k] for k in list(train_imgs)[:10]}\n",
     "val_loader = None"
    ]
   },
@@ -182,7 +225,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.9.5",
+   "display_name": "INF367A",
    "language": "python",
    "name": "python3"
   },
@@ -196,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
