--- a/model.ipynb
+++ b/model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,12 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "import rasterio\n",
-    "import pickle"
+    "import pickle\n",
+    "\n",
+    "device = (torch.device('cuda') if torch.cuda.is_available()\n",
+    "          else torch.device('cpu'))\n",
+    "\n",
+    "print(f\"Training on {device}.\")"
    ]
   },
   {
@@ -30,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,12 +78,16 @@
     "\n",
     "    model.train()\n",
     "    optimizer.zero_grad()\n",
+    "    model = model.to(device)\n",
     "    \n",
     "    for epoch in range(1, n_epochs + 1):\n",
     "        loss_train = 0.0\n",
     "        loss_val = 0.0\n",
     "\n",
     "        for imgs, labels in train_loader:\n",
+    "            imgs = imgs.to(device)\n",
+    "            labels = labels.to(device)\n",
+    "            model.train()\n",
     "\n",
     "            outputs = model(imgs)\n",
     "            loss = loss_fn(outputs, labels)\n",
@@ -91,6 +100,8 @@
     "\n",
     "        with torch.no_grad():\n",
     "            for imgs, labels in val_loader:\n",
+    "                imgs = imgs.to(device)\n",
+    "                labels = labels.to(device)\n",
     "                model.eval()\n",
     "\n",
     "                outputs = model(imgs)\n",
@@ -126,21 +137,19 @@
     "    #Architecture\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.conv1 = nn.Conv2d(in_channels=12, out_channels=32, kernel_size=(5,5), padding=2)  \n",
-    "        self.pool = nn.MaxPool2d(2)\n",
-    "        self.conv2 = nn.Conv2d(in_channels=32, out_channels=12, kernel_size=(3,3), padding=1)  \n",
+    "        self.conv1 = nn.Conv2d(in_channels=12, out_channels=6, kernel_size=(5,5), padding=2)  \n",
+    "        self.pool1 = nn.MaxPool2d(2)\n",
+    "        self.conv2 = nn.Conv2d(in_channels=6, out_channels=1, kernel_size=(3,3), padding=1)  \n",
+    "        self.pool2 = nn.MaxPool2d(2)\n",
     "        self.flat = nn.Flatten()\n",
-    "        self.fc = nn.Linear(in_features=12 * 1024 * 1024, out_features=1 * 1024 * 1024)\n",
+    "        self.fc = nn.Linear(in_features=256 * 256, out_features=1024 * 1024)\n",
     "        self.a = nn.Sigmoid()\n",
     "\n",
     "    #Forward Pass:  \n",
     "    def forward(self, x): \n",
-    "        print(\"Input\",x.shape)  \n",
     "        out = self.conv1(x)   \n",
-    "        print(\"First conv\", out.shape)\n",
     "        out = torch.relu(self.pool(out))\n",
-    "        out = self.conv2(x)\n",
-    "        print(\"Second conv\", out.shape)\n",
+    "        out = self.conv2(out)\n",
     "        out = self.flat(out) \n",
     "        out = torch.relu(self.fc(out))  \n",
     "        out = self.a(out)\n",
@@ -149,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
