model with output

--- a/model.ipynb
+++ b/model.ipynb
@@ -14,6 +14,8 @@
    "outputs": [],
    "source": [
     "import torch\n",
+    "import torch.nn.functional as F\n",
+    "from torch.utils.data import TensorDataset, DataLoader\n",
     "from torch import nn, optim\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
@@ -32,22 +34,107 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading training images from pickle file...\n"
+     ]
+    }
+   ],
    "source": [
     "def import_training_imgs(train_folder):\n",
-    "    train_data = dict()\n",
+    "    x_train= []\n",
     "\n",
     "    for file in os.listdir(train_folder):\n",
     "        if file.endswith('.tif'):\n",
-    "            with rasterio.open(train_folder + file) as src:\n",
-    "                train_data.update({ file : src.read() })\n",
-    "    return train_data\n",
+    "            file_path = os.path.join(train_folder, file)\n",
+    "            with rasterio.open(file_path) as src:\n",
+    "                image_np = src.read()  \n",
+    "                image_tensor = torch.from_numpy(image_np).float()\n",
+    "                x_train.append(image_tensor)\n",
+    "    return x_train\n",
     "\n",
-    "if os.path.exists('loaded/train_images.pkl'):\n",
-    "    train_imgs = pickle.load(open('loaded/train_images.pkl', 'rb'))\n",
+    "if os.path.exists('./data/loaded/train_images.pkl'):\n",
+    "    print('Loading training images from pickle file...')\n",
+    "    x_train = pickle.load(open('./data/loaded/train_images.pkl', 'rb'))\n",
     "else:\n",
-    "    train_imgs = import_training_imgs('data/train_images/')\n",
-    "    pickle.dump(train_imgs, open('loaded/train_images.pkl', 'wb'))"
+    "    print('Importing training images...')\n",
+    "    x_train = import_training_imgs('data/train_images/')\n",
+    "    pickle.dump(x_train, open('data/loaded/train_images.pkl', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def import_training_labels(train_folder):\n",
+    "    y_train = []\n",
+    "\n",
+    "    for file in os.listdir(train_folder):\n",
+    "        if file.endswith('.tif'):\n",
+    "            file_path = os.path.join(train_folder, file)\n",
+    "            with rasterio.open(file_path) as src:\n",
+    "                image_np = src.read()\n",
+    "                image_tensor = torch.from_numpy(image_np)\n",
+    "                y_train.append(image_tensor)\n",
+    "    return y_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train = import_training_labels('data/masked_annotations/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([12, 1024, 1024])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train[1].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "x_train_tensor = torch.stack(x_train)  # Shape: [num_samples, 12, 1024, 1024]\n",
+    "y_train_tensor = torch.stack(y_train).squeeze(1).long()   # Shape: [num_samples, 1, 1024, 1024]\n",
+    "\n",
+    "train_dataset = TensorDataset(x_train_tensor, y_train_tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 10\n",
+    "\n",
+    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)"
    ]
   },
   {
@@ -59,17 +146,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(n_epochs, optimizer, model, loss_fn, train_loader, val_loader):\n",
+    "def train(n_epochs, optimizer, model, loss_fn, train_loader, val_loader=None):\n",
     "\n",
     "    n_train_batch = len(train_loader)\n",
     "    losses_train = []\n",
-    "\n",
-    "    n_val_batch = len(val_loader)\n",
-    "    losses_val = []\n",
+    "    if val_loader is not None:\n",
+    "        n_val_batch = len(val_loader)\n",
+    "        losses_val = []\n",
     "\n",
     "    model.train()\n",
     "    optimizer.zero_grad()\n",
@@ -81,7 +168,7 @@
     "        for imgs, labels in train_loader:\n",
     "\n",
     "            outputs = model(imgs)\n",
-    "            loss = loss_fn(outputs, labels)\n",
+    "            loss = loss_fn(outputs, labels.squeeze(1))\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "            optimizer.zero_grad()\n",
@@ -89,23 +176,25 @@
     "            loss_train += loss.item()\n",
     "        losses_train.append(loss_train / n_train_batch)\n",
     "\n",
-    "        with torch.no_grad():\n",
-    "            for imgs, labels in val_loader:\n",
-    "                model.eval()\n",
+    "        if val_loader is not None:\n",
+    "            with torch.no_grad():\n",
+    "                for imgs, labels in val_loader:\n",
+    "                    model.eval()\n",
     "\n",
-    "                outputs = model(imgs)\n",
-    "                loss = loss_fn(outputs, labels)\n",
-    "                loss_val += loss.item()\n",
+    "                    outputs = model(imgs)\n",
+    "                    loss = loss_fn(outputs, labels)\n",
+    "                    loss_val += loss.item()\n",
     "\n",
-    "            losses_val.append(loss_val / n_val_batch)\n",
+    "                losses_val.append(loss_val / n_val_batch)\n",
     "\n",
     "        if epoch == 1 or epoch % 5 == 0:\n",
     "            print(f'--------- Epoch: {epoch} ---------')\n",
     "            print('Training loss {:.5f}'.format(loss_train / n_train_batch))\n",
-    "            print('Validation loss {:.5f}'.format(loss_val / n_val_batch))\n",
+    "            if val_loader is not None:\n",
+    "                print('Validation loss {:.5f}'.format(loss_val / n_val_batch))\n",
     "            print()\n",
     "\n",
-    "    return losses_train, losses_val"
+    "    return losses_train#, losses_val"
    ]
   },
   {
@@ -117,78 +206,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "class SimpleConvNet(nn.Module):\n",
-    "\n",
-    "    #Architecture\n",
     "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "        self.conv1 = nn.Conv2d(in_channels=12, out_channels=32, kernel_size=(5,5), padding=2)  \n",
-    "        self.pool = nn.MaxPool2d(2)\n",
-    "        self.conv2 = nn.Conv2d(in_channels=32, out_channels=12, kernel_size=(3,3), padding=1)  \n",
-    "        self.flat = nn.Flatten()\n",
-    "        self.fc = nn.Linear(in_features=12 * 1024 * 1024, out_features=1 * 1024 * 1024)\n",
-    "        self.a = nn.Sigmoid()\n",
-    "\n",
-    "    #Forward Pass:  \n",
-    "    def forward(self, x): \n",
-    "        print(\"Input\",x.shape)  \n",
-    "        out = self.conv1(x)   \n",
-    "        print(\"First conv\", out.shape)\n",
-    "        out = torch.relu(self.pool(out))\n",
-    "        out = self.conv2(x)\n",
-    "        print(\"Second conv\", out.shape)\n",
-    "        out = self.flat(out) \n",
-    "        out = torch.relu(self.fc(out))  \n",
-    "        out = self.a(out)\n",
-    "        return out"
+    "        super(SimpleConvNet, self).__init__()\n",
+    "        \n",
+    "        # Encoder: downsample from 1024x1024 to 256x256\n",
+    "        self.down1 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels=12, out_channels=32, kernel_size=3, padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(kernel_size=2)  # 1024 -> 512\n",
+    "        )\n",
+    "        self.down2 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels=32, out_channels=64, kernel_size=3, padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(kernel_size=2)  # 512 -> 256\n",
+    "        )\n",
+    "        \n",
+    "        # Decoder: upsample from 256x256 back to 1024x1024\n",
+    "        self.up1 = nn.ConvTranspose2d(in_channels=64, out_channels=32, \n",
+    "                                      kernel_size=2, stride=2)  # 256 -> 512\n",
+    "        self.up2 = nn.ConvTranspose2d(in_channels=32, out_channels=5,  # output 5 channels now\n",
+    "                                      kernel_size=2, stride=2)  # 512 -> 1024\n",
+    "        \n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        # [batch, 12, 1024, 1024]\n",
+    "        x = self.down1(x)    # [batch, 32, 512, 512]\n",
+    "        x = self.down2(x)    # [batch, 64, 256, 256]\n",
+    "        x = F.relu(self.up1(x))  # [batch, 32, 512, 512]\n",
+    "        x = self.up2(x)      # [batch, 5, 1024, 1024]\n",
+    "        return x\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = SimpleConvNet()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"hei\")\n",
-    "image = train_imgs['image_1.tif']\n",
-    "print(image.shape)\n",
-    "model(image)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Hyperparameters and training"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define hyperparameters\n",
-    "n_epochs = 10\n",
-    "lr = 1e-2\n",
     "model = SimpleConvNet()\n",
-    "optimizer = optim.SGD(model.parameters(), lr=lr)\n",
-    "loss_fn = None\n",
-    "train_loader = {k: train_imgs[k] for k in list(train_imgs)[:10]}\n",
-    "val_loader = None"
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
+    "loss_fn = nn.CrossEntropyLoss()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------- Epoch: 1 ---------\n",
+      "Training loss nan\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_epochs = 1 \n",
+    "\n",
+    "losses_train = train(n_epochs, optimizer, model, loss_fn, train_loader)\n"
    ]
   },
   {
@@ -196,36 +279,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "losses_train, losses_val = train(\n",
-    "        n_epochs = n_epochs,\n",
-    "        optimizer = optimizer,\n",
-    "        model = model,\n",
-    "        loss_fn = loss_fn,\n",
-    "        train_loader = train_loader,\n",
-    "        val_loader=val_loader\n",
-    "    )\n",
-    "\n",
-    "# Plot the loss\n",
-    "xvalues = range(1, n_epochs + 1)\n",
-    "train_yvalues = losses_train\n",
-    "val_yvalues = losses_val\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "\n",
-    "ax.plot(xvalues, train_yvalues, label='training')\n",
-    "ax.plot(xvalues, val_yvalues, label='validation')\n",
-    "ax.set_title(f'Training and Validation loss for {model.__class__.__name__}')\n",
-    "ax.set_xlabel('Epochs')\n",
-    "ax.set_ylabel('Loss')\n",
-    "ax.legend()\n",
-    "plt.show()\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "INF367A",
+   "display_name": ".solafuneenv",
    "language": "python",
    "name": "python3"
   },
@@ -239,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
