--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -8,10 +8,156 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.loading import load_masked_images, load_images, load_labels"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Loading the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = load_labels()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'class': 'plantation', 'segmentation': [0.0, 449.0, 9.0, 454.0, 18.0, 461.0, 26.0, 468.0, 33.0, 475.0, 40.0, 477.0, 50.0, 485.0, 59.0, 497.0, 70.0, 502.0, 78.0, 513.0, 82.0, 523.0, 91.0, 536.0, 97.0, 546.0, 98.0, 556.0, 102.0, 558.0, 111.0, 578.0, 122.0, 603.0, 132.0, 627.0, 133.0, 635.0, 113.0, 641.0, 86.0, 642.0, 86.0, 642.0, 71.0, 643.0, 69.0, 654.0, 65.0, 665.0, 58.0, 674.0, 51.0, 681.0, 56.0, 694.0, 57.0, 700.0, 80.0, 695.0, 83.0, 700.0, 88.0, 702.0, 88.0, 703.0, 102.0, 699.0, 113.0, 695.0, 122.0, 696.0, 131.0, 705.0, 144.0, 715.0, 151.0, 727.0, 155.0, 730.0, 165.0, 725.0, 180.0, 721.0, 187.0, 723.0, 198.0, 732.0, 223.0, 742.0, 250.0, 753.0, 261.0, 757.0, 261.0, 769.0, 344.0, 785.0, 425.0, 801.0, 523.0, 823.0, 582.0, 835.0, 587.0, 842.0, 587.0, 863.0, 592.0, 874.0, 592.0, 887.0, 598.0, 895.0, 608.0, 901.0, 612.0, 904.0, 612.0, 954.0, 609.0, 964.0, 600.0, 971.0, 592.0, 973.0, 588.0, 976.0, 571.0, 975.0, 563.0, 975.0, 564.0, 996.0, 598.0, 996.0, 623.0, 997.0, 631.0, 1000.0, 640.0, 1010.0, 642.0, 1024.0, 0.0, 1024.0]}\n",
+      "{'class': 'plantation', 'segmentation': [294.0, 0.0, 299.0, 11.0, 308.0, 26.0, 326.0, 34.0, 349.0, 35.0, 371.0, 36.0, 394.0, 41.0, 415.0, 47.0, 428.0, 53.0, 438.0, 66.0, 454.0, 70.0, 455.0, 73.0, 459.0, 75.0, 460.0, 84.0, 460.0, 108.0, 460.0, 153.0, 459.0, 179.0, 531.0, 179.0, 571.0, 204.0, 627.0, 234.0, 688.0, 270.0, 711.0, 285.0, 660.0, 322.0, 626.0, 340.0, 628.0, 471.0, 666.0, 471.0, 705.0, 471.0, 703.0, 492.0, 700.0, 535.0, 693.0, 571.0, 650.0, 621.0, 604.0, 671.0, 591.0, 690.0, 579.0, 708.0, 580.0, 708.0, 550.0, 710.0, 517.0, 715.0, 500.0, 717.0, 465.0, 720.0, 444.0, 718.0, 426.0, 721.0, 407.0, 719.0, 393.0, 714.0, 358.0, 713.0, 324.0, 724.0, 253.0, 676.0, 253.0, 676.0, 284.0, 656.0, 259.0, 647.0, 253.0, 637.0, 215.0, 596.0, 186.0, 543.0, 170.0, 505.0, 152.0, 474.0, 133.0, 457.0, 103.0, 438.0, 67.0, 414.0, 38.0, 405.0, 17.0, 396.0, 0.0, 395.0, 0.0, 0.0]}\n",
+      "{'class': 'plantation', 'segmentation': [682.0, 859.0, 683.0, 880.0, 698.0, 909.0, 723.0, 949.0, 726.0, 953.0, 730.0, 976.0, 734.0, 982.0, 745.0, 984.0, 752.0, 988.0, 757.0, 1000.0, 846.0, 1001.0, 863.0, 968.0, 873.0, 953.0, 872.0, 897.0, 794.0, 872.0, 791.0, 859.0, 785.0, 846.0, 774.0, 844.0, 776.0, 832.0, 768.0, 831.0, 767.0, 816.0, 741.0, 829.0, 702.0, 827.0]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in labels[\"train_0.tif\"]:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images = load_images()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'image': array([[[ 272. ,  268. ,  268. , ...,  260.5,  260.5,  260.5],\n",
+      "        [ 233. ,  216. ,  216. , ...,  267. ,  267. ,  267. ],\n",
+      "        [ 233. ,  216. ,  216. , ...,  267. ,  267. ,  267. ],\n",
+      "        ...,\n",
+      "        [ 618.5,  636.5,  636.5, ...,  621.5,  621.5,  621.5],\n",
+      "        [ 618.5, 1097. , 1097. , ...,  621.5,  621.5,  621.5],\n",
+      "        [ 618.5, 1097. , 1097. , ...,  621.5,  621.5,  621.5]],\n",
+      "\n",
+      "       [[ 260. ,  228. ,  228. , ...,  201.5,  231. ,  238.5],\n",
+      "        [ 250. ,  239. ,  239. , ...,  224.5,  228.5,  227.5],\n",
+      "        [ 203. ,  249. ,  249. , ...,  227. ,  209. ,  219. ],\n",
+      "        ...,\n",
+      "        [ 982.5,  894. ,  894. , ...,  618.5,  676. ,  655.5],\n",
+      "        [ 699. , 1226. , 1226. , ...,  618.5,  676. ,  655.5],\n",
+      "        [ 559. , 1172. , 1172. , ...,  637.5,  674. ,  627.5]],\n",
+      "\n",
+      "       [[ 484. ,  469. ,  469. , ...,  419.5,  480. ,  558. ],\n",
+      "        [ 469. ,  494. ,  494. , ...,  479. ,  493. ,  540. ],\n",
+      "        [ 423. ,  494. ,  494. , ...,  486.5,  457.5,  470.5],\n",
+      "        ...,\n",
+      "        [1257.5, 1074.5, 1074.5, ...,  792.5,  819.5,  811. ],\n",
+      "        [ 960.5, 1346. , 1346. , ...,  792.5,  819.5,  811. ],\n",
+      "        [ 673. , 1244. , 1244. , ...,  806.5,  807. ,  751. ]],\n",
+      "\n",
+      "       ...,\n",
+      "\n",
+      "       [[3918. , 3888. , 3888. , ..., 3622.5, 3622.5, 3622.5],\n",
+      "        [3871. , 3625. , 3625. , ..., 3928. , 3928. , 3928. ],\n",
+      "        [3871. , 3625. , 3625. , ..., 3928. , 3928. , 3928. ],\n",
+      "        ...,\n",
+      "        [2545. , 2088. , 2088. , ..., 1958.5, 1958.5, 1958.5],\n",
+      "        [2545. , 3251. , 3251. , ..., 1958.5, 1958.5, 1958.5],\n",
+      "        [2545. , 3251. , 3251. , ..., 1958.5, 1958.5, 1958.5]],\n",
+      "\n",
+      "       [[1989. , 2246. , 2246. , ..., 1359.5, 1383.5, 1383.5],\n",
+      "        [1988. , 2243. , 2243. , ..., 1448.5, 1440. , 1440. ],\n",
+      "        [1988. , 2243. , 2243. , ..., 1448.5, 1440. , 1440. ],\n",
+      "        ...,\n",
+      "        [2865. , 2583.5, 2583.5, ..., 2742.5, 2747. , 2747. ],\n",
+      "        [2520.5, 3866. , 3866. , ..., 2742.5, 2747. , 2747. ],\n",
+      "        [2520.5, 3866. , 3866. , ..., 2742.5, 2747. , 2747. ]],\n",
+      "\n",
+      "       [[ 880. , 1025. , 1025. , ...,  516. ,  535.5,  535.5],\n",
+      "        [ 865. , 1074. , 1074. , ...,  563. ,  549.5,  549.5],\n",
+      "        [ 865. , 1074. , 1074. , ...,  563. ,  549.5,  549.5],\n",
+      "        ...,\n",
+      "        [2165. , 2035. , 2035. , ..., 2043. , 2044.5, 2044.5],\n",
+      "        [1914.5, 3081. , 3081. , ..., 2043. , 2044.5, 2044.5],\n",
+      "        [1914.5, 3081. , 3081. , ..., 2043. , 2044.5, 2044.5]]]), 'profile': {'driver': 'GTiff', 'dtype': 'float64', 'nodata': None, 'width': 1024, 'height': 1024, 'count': 12, 'crs': CRS.from_wkt('GEOGCS[\"WGS 84\",DATUM[\"WGS_1984\",SPHEROID[\"WGS 84\",6378137,298.257223563,AUTHORITY[\"EPSG\",\"7030\"]],AUTHORITY[\"EPSG\",\"6326\"]],PRIMEM[\"Greenwich\",0,AUTHORITY[\"EPSG\",\"8901\"]],UNIT[\"degree\",0.0174532925199433,AUTHORITY[\"EPSG\",\"9122\"]],AXIS[\"Latitude\",NORTH],AXIS[\"Longitude\",EAST],AUTHORITY[\"EPSG\",\"4326\"]]'), 'transform': Affine(7.159759378336239e-05, 0.0, 111.02617783449821,\n",
+      "       0.0, -7.19770944171594e-05, -2.659827023558535), 'blockxsize': 256, 'blockysize': 256, 'tiled': True, 'compress': 'lzw', 'interleave': 'pixel'}, 'height': 1024, 'width': 1024}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(images[\"train_0.tif\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masked_images = load_masked_images()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'image': array([[[1., 1., 1., ..., 0., 0., 0.],\n",
+      "        [1., 1., 1., ..., 0., 0., 0.],\n",
+      "        [1., 1., 1., ..., 0., 0., 0.],\n",
+      "        ...,\n",
+      "        [1., 1., 1., ..., 0., 0., 0.],\n",
+      "        [1., 1., 1., ..., 0., 0., 0.],\n",
+      "        [1., 1., 1., ..., 0., 0., 0.]]]), 'profile': {'driver': 'GTiff', 'dtype': 'float64', 'nodata': None, 'width': 1024, 'height': 1024, 'count': 1, 'crs': CRS.from_wkt('GEOGCS[\"WGS 84\",DATUM[\"WGS_1984\",SPHEROID[\"WGS 84\",6378137,298.257223563,AUTHORITY[\"EPSG\",\"7030\"]],AUTHORITY[\"EPSG\",\"6326\"]],PRIMEM[\"Greenwich\",0,AUTHORITY[\"EPSG\",\"8901\"]],UNIT[\"degree\",0.0174532925199433,AUTHORITY[\"EPSG\",\"9122\"]],AXIS[\"Latitude\",NORTH],AXIS[\"Longitude\",EAST],AUTHORITY[\"EPSG\",\"4326\"]]'), 'transform': Affine(7.159759378336239e-05, 0.0, 111.02617783449821,\n",
+      "       0.0, -7.19770944171594e-05, -2.659827023558535), 'blockxsize': 256, 'blockysize': 256, 'tiled': True, 'compress': 'lzw', 'interleave': 'band'}, 'height': 1024, 'width': 1024}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(masked_images[\"train_0.tif\"])"
    ]
   },
   {
@@ -65,8 +211,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "INF367A",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
