--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -63,66 +63,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'image': array([[[ 272. ,  268. ,  268. , ...,  260.5,  260.5,  260.5],\n",
-      "        [ 233. ,  216. ,  216. , ...,  267. ,  267. ,  267. ],\n",
-      "        [ 233. ,  216. ,  216. , ...,  267. ,  267. ,  267. ],\n",
-      "        ...,\n",
-      "        [ 618.5,  636.5,  636.5, ...,  621.5,  621.5,  621.5],\n",
-      "        [ 618.5, 1097. , 1097. , ...,  621.5,  621.5,  621.5],\n",
-      "        [ 618.5, 1097. , 1097. , ...,  621.5,  621.5,  621.5]],\n",
-      "\n",
-      "       [[ 260. ,  228. ,  228. , ...,  201.5,  231. ,  238.5],\n",
-      "        [ 250. ,  239. ,  239. , ...,  224.5,  228.5,  227.5],\n",
-      "        [ 203. ,  249. ,  249. , ...,  227. ,  209. ,  219. ],\n",
-      "        ...,\n",
-      "        [ 982.5,  894. ,  894. , ...,  618.5,  676. ,  655.5],\n",
-      "        [ 699. , 1226. , 1226. , ...,  618.5,  676. ,  655.5],\n",
-      "        [ 559. , 1172. , 1172. , ...,  637.5,  674. ,  627.5]],\n",
-      "\n",
-      "       [[ 484. ,  469. ,  469. , ...,  419.5,  480. ,  558. ],\n",
-      "        [ 469. ,  494. ,  494. , ...,  479. ,  493. ,  540. ],\n",
-      "        [ 423. ,  494. ,  494. , ...,  486.5,  457.5,  470.5],\n",
-      "        ...,\n",
-      "        [1257.5, 1074.5, 1074.5, ...,  792.5,  819.5,  811. ],\n",
-      "        [ 960.5, 1346. , 1346. , ...,  792.5,  819.5,  811. ],\n",
-      "        [ 673. , 1244. , 1244. , ...,  806.5,  807. ,  751. ]],\n",
-      "\n",
-      "       ...,\n",
-      "\n",
-      "       [[3918. , 3888. , 3888. , ..., 3622.5, 3622.5, 3622.5],\n",
-      "        [3871. , 3625. , 3625. , ..., 3928. , 3928. , 3928. ],\n",
-      "        [3871. , 3625. , 3625. , ..., 3928. , 3928. , 3928. ],\n",
-      "        ...,\n",
-      "        [2545. , 2088. , 2088. , ..., 1958.5, 1958.5, 1958.5],\n",
-      "        [2545. , 3251. , 3251. , ..., 1958.5, 1958.5, 1958.5],\n",
-      "        [2545. , 3251. , 3251. , ..., 1958.5, 1958.5, 1958.5]],\n",
-      "\n",
-      "       [[1989. , 2246. , 2246. , ..., 1359.5, 1383.5, 1383.5],\n",
-      "        [1988. , 2243. , 2243. , ..., 1448.5, 1440. , 1440. ],\n",
-      "        [1988. , 2243. , 2243. , ..., 1448.5, 1440. , 1440. ],\n",
-      "        ...,\n",
-      "        [2865. , 2583.5, 2583.5, ..., 2742.5, 2747. , 2747. ],\n",
-      "        [2520.5, 3866. , 3866. , ..., 2742.5, 2747. , 2747. ],\n",
-      "        [2520.5, 3866. , 3866. , ..., 2742.5, 2747. , 2747. ]],\n",
-      "\n",
-      "       [[ 880. , 1025. , 1025. , ...,  516. ,  535.5,  535.5],\n",
-      "        [ 865. , 1074. , 1074. , ...,  563. ,  549.5,  549.5],\n",
-      "        [ 865. , 1074. , 1074. , ...,  563. ,  549.5,  549.5],\n",
-      "        ...,\n",
-      "        [2165. , 2035. , 2035. , ..., 2043. , 2044.5, 2044.5],\n",
-      "        [1914.5, 3081. , 3081. , ..., 2043. , 2044.5, 2044.5],\n",
-      "        [1914.5, 3081. , 3081. , ..., 2043. , 2044.5, 2044.5]]]), 'profile': {'driver': 'GTiff', 'dtype': 'float64', 'nodata': None, 'width': 1024, 'height': 1024, 'count': 12, 'crs': CRS.from_wkt('GEOGCS[\"WGS 84\",DATUM[\"WGS_1984\",SPHEROID[\"WGS 84\",6378137,298.257223563,AUTHORITY[\"EPSG\",\"7030\"]],AUTHORITY[\"EPSG\",\"6326\"]],PRIMEM[\"Greenwich\",0,AUTHORITY[\"EPSG\",\"8901\"]],UNIT[\"degree\",0.0174532925199433,AUTHORITY[\"EPSG\",\"9122\"]],AXIS[\"Latitude\",NORTH],AXIS[\"Longitude\",EAST],AUTHORITY[\"EPSG\",\"4326\"]]'), 'transform': Affine(7.159759378336239e-05, 0.0, 111.02617783449821,\n",
-      "       0.0, -7.19770944171594e-05, -2.659827023558535), 'blockxsize': 256, 'blockysize': 256, 'tiled': True, 'compress': 'lzw', 'interleave': 'pixel'}, 'height': 1024, 'width': 1024}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(images[\"train_0.tif\"])"
    ]
@@ -138,24 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'image': array([[[1., 1., 1., ..., 0., 0., 0.],\n",
-      "        [1., 1., 1., ..., 0., 0., 0.],\n",
-      "        [1., 1., 1., ..., 0., 0., 0.],\n",
-      "        ...,\n",
-      "        [1., 1., 1., ..., 0., 0., 0.],\n",
-      "        [1., 1., 1., ..., 0., 0., 0.],\n",
-      "        [1., 1., 1., ..., 0., 0., 0.]]]), 'profile': {'driver': 'GTiff', 'dtype': 'float64', 'nodata': None, 'width': 1024, 'height': 1024, 'count': 1, 'crs': CRS.from_wkt('GEOGCS[\"WGS 84\",DATUM[\"WGS_1984\",SPHEROID[\"WGS 84\",6378137,298.257223563,AUTHORITY[\"EPSG\",\"7030\"]],AUTHORITY[\"EPSG\",\"6326\"]],PRIMEM[\"Greenwich\",0,AUTHORITY[\"EPSG\",\"8901\"]],UNIT[\"degree\",0.0174532925199433,AUTHORITY[\"EPSG\",\"9122\"]],AXIS[\"Latitude\",NORTH],AXIS[\"Longitude\",EAST],AUTHORITY[\"EPSG\",\"4326\"]]'), 'transform': Affine(7.159759378336239e-05, 0.0, 111.02617783449821,\n",
-      "       0.0, -7.19770944171594e-05, -2.659827023558535), 'blockxsize': 256, 'blockysize': 256, 'tiled': True, 'compress': 'lzw', 'interleave': 'band'}, 'height': 1024, 'width': 1024}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(masked_images[\"train_0.tif\"])"
    ]
@@ -212,7 +140,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "INF367A",
+   "display_name": ".solafuneenv",
    "language": "python",
    "name": "python3"
   },
@@ -226,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
