exploring spennende stuff

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -34,9 +34,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#labels = load_labels()\n",
-    "#images = load_images()\n",
-    "masked_images = load_masked_images()"
+    "labels = load_labels()\n",
+    "images = load_images(subset=True)\n",
+    "masked_images = load_masked_images(subset=True)"
    ]
   },
   {
@@ -142,7 +142,7 @@
     "            found_nan.append(img)\n",
     "            break\n",
     "\n",
-    "print(\"Images with NaN values:\", found_nan)"
+    "print(f\"Found {len(found_nan)} images with NaN values: {found_nan}\")"
    ]
   },
   {
@@ -167,7 +167,7 @@
     "    if not nan_mask.any():\n",
     "        different_nan.append(img)\n",
     "\n",
-    "print(\"Images with different NaN values per band:\", different_nan)"
+    "print(f\"Found {len(different_nan)} with different NaN values per band: {different_nan}\")"
    ]
   },
   {
@@ -177,7 +177,7 @@
    "outputs": [],
    "source": [
     "for img in different_nan:\n",
-    "    plot_image(img, num_plots=2)"
+    "    plot_image(img, num_plots=3)"
    ]
   },
   {
@@ -188,10 +188,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your mama"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Looking at a datapoints profile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(images[example_image][\"profile\"])"
    ]
   },
   {
