--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -369,9 +369,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
+    "# import os\n",
     "\n",
-    "folder_path = \"data/evaluation_images_subset/\"\n",
+    "folder_path = \"./data/evaluation_images_subset\"\n",
     "plot_images(folder_path, num_plots=1, type=\"eval\")"
    ]
   }
