copilot og meg forbedret koden

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -16,14 +16,11 @@
     "import os\n",
     "import sys\n",
     "sys.path.append(os.path.abspath(\"..\"))\n",
-    "\n",
     "from utils.loading import load_masked_images, load_images, load_labels\n",
-    "from utils.visualization import plot_image, plot_images, plot_masked_image, plot_all_bands\n",
+    "from utils.visualization import plot_image, plot_masked_image\n",
     "from utils.normalize import normalize\n",
     "import json\n",
     "from utils.visualization import plot_predictions\n",
-    "\n",
-    "from torchvision import transforms\n",
     "import torch\n",
     "import numpy as np\n",
     "from torch.utils.data import TensorDataset\n"
@@ -60,7 +57,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example_image = \"train_0.tif\""
+    "example_image = \"train_1.tif\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot of all bands"
    ]
   },
   {
@@ -69,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_all_bands(example_image)"
+    "plot_image(example_image, band=1, num_plots=12)"
    ]
   },
   {
@@ -190,7 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Apparently not. We wanted to look at the NaN values, but this was found to be diffuclt (most of the time) or impossible, as they are most likely too insignificant to be seen."
+    "Apparently not. We wanted to look at the NaN values, but this was found to be diffuclt (most of the time) or impossible, as they are most likely too insignificant to be seen. NaN values are drawn as \"magneta\" (vibrant purple)."
    ]
   },
   {
@@ -203,8 +207,7 @@
     "for img in found_nan:\n",
     "    if count == 5:\n",
     "        break\n",
-    "    plot_image(img, num_plots=3)\n",
-    "    plot_image(img, num_plots=3, no_nan=True)\n",
+    "    plot_image(img, band=1, num_plots=12, polygons=False, no_nan=True)\n",
     "    count += 1"
    ]
   },
@@ -248,9 +251,9 @@
    "source": [
     "for i in range(1,9,3):\n",
     "    # First 6 images including the polygon\n",
-    "    plot_image(example_image, num_plots=1, band=i)\n",
+    "    plot_image(example_image, num_plots=3, band=i)\n",
     "    # Last 6 images excluding the polygon\n",
-    "    plot_image(example_image, num_plots=1, band=i, polygons=False)"
+    "    plot_image(example_image, num_plots=3, band=i, polygons=False)"
    ]
   },
   {
@@ -297,9 +300,7 @@
     "normalized_image_tensor = normalize(image_tensor)\n",
     "\n",
     "print(\"Before normalization:\", image_tensor[0][0][0])\n",
-    "print(\"After normalization:\", normalized_image_tensor[0][0][0], end=\"\\n\\n\")\n",
-    "\n",
-    "plot_image(example_image, num_plots=1)\n"
+    "print(\"After normalization:\", normalized_image_tensor[0][0][0], end=\"\\n\\n\")"
    ]
   },
   {
@@ -309,11 +310,9 @@
    "outputs": [],
    "source": [
     "subset = True\n",
-    "x_train_dict = load_images(subset)\n",
-    "y_train_dict = load_masked_images(subset)\n",
     "\n",
-    "x_train = [torch.tensor(each['image']) for each in x_train_dict.values()]\n",
-    "y_train = [torch.tensor(each['image']) for each in y_train_dict.values()]\n",
+    "x_train = [torch.tensor(each['image']) for each in images.values()]\n",
+    "y_train = [torch.tensor(each['image']) for each in masked_images.values()]\n",
     "\n",
     "x_train_tensor = torch.stack(x_train, dim=0)  # Shape: [num_samples, 12, 1024, 1024]\n",
     "y_train_tensor = torch.stack(y_train, dim=0).squeeze(1).long()   # Shape: [num_samples, 1, 1024, 1024]\n",
@@ -380,14 +379,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"Current working directory: {os.getcwd()}\")\n",
-    "\n",
-    "with open(\"./../data/predictions/output.json\", \"r\") as f:\n",
+    "with open(\"./data/predictions/output.json\", \"r\") as f: # noen ganger må man ha path: \"./../data/predictions/output.json\"\n",
     "    predictions = json.load(f)\n",
     "\n",
     "for elem in predictions[\"images\"]:\n",
     "    path = elem[\"file_name\"]\n",
-    "    plot_predictions(path)\n"
+    "    plot_predictions(path)"
    ]
   }
  ],
